action to realize count of different buttons events
